--- a/components/dms2223frontend/dms2223frontend/templates/inicio/inicio.html
+++ b/components/dms2223frontend/dms2223frontend/templates/inicio/inicio.html
@@ -1,6 +1,6 @@
-{% extends "base.html" %}
+{% extends "inicio/base_anon.html" %}
 {% block title %} Inicio {% endblock %}
-{% block contentheading %} Bienvenido {% endblock %}
+{% block contentheading %}<h1>Bienvenidos asd</h1> {% endblock %}
 {% block maincontent %}
 {% endblock %}
 
