Base de la pagina de inicio

--- a/components/dms2223frontend/dms2223frontend/templates/login.html
+++ b/components/dms2223frontend/dms2223frontend/templates/login.html
@@ -7,7 +7,7 @@
     <div id="login-form">
         <h4 class="aligncenter">Log in</h4>
         <form action="login" method="post">
-            <input type="text" name="user" placeholder="Username" autofocus />
+            <input type="text" name="user" placeholder="Usuario" autofocus />
             <input type="password" name="pass" placeholder="Password" />
             <p class="aligncenter">{{ submit_button('bluebg', 'Log in') }}</p>
         </form>
