--- a/components/dms2223frontend/dms2223frontend/templates/inicio/inicio.html
+++ b/components/dms2223frontend/dms2223frontend/templates/inicio/inicio.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block maincontent %}
-    <div>
+    <div class="container2cols">
 
         <div id="registro">
             {{ registro() }}
