--- a/components/dms2223frontend/dms2223frontend/templates/home.html
+++ b/components/dms2223frontend/dms2223frontend/templates/home.html
@@ -14,5 +14,6 @@
         {{button("greenbg","/nueva_pregunta","Crear nueva",())}}
     </div>
     {{ preguntas() }}
+    <!-- Solo como test -->
     {{ form_respuesta(1234) }}
 {% endblock %}
