--- a/components/dms2223frontend/dms2223frontend/templates/macros/buttons.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/buttons.html
@@ -1,6 +1,16 @@
 {% macro button(color_class, href, content, onclick=None) %}
 <a class="button {{ color_class }}" href="{{ href }}" {% if onclick %}onclick="{{ onclick }}"{%endif%}>{{ content }}</a>
 {% endmacro %}
+
 {% macro submit_button(color_class, content) %}
 {{ button(color_class, '#', content, 'this.closest(\'form\').submit();return false;') }}
 {% endmacro %}
+
+{% macro voteUp_button() %}
+{{ button(greenbg, '#', "vote Up", 'this.voteUp()') }}
+{% endmacro %}
+
+{% macro voteDown_button() %}
+{{ button(redbg, '#', "vote Down", 'this.voteDown') }}
+{% endmacro %}
+
