--- a/components/dms2223frontend/dms2223frontend/templates/home.html
+++ b/components/dms2223frontend/dms2223frontend/templates/home.html
@@ -1,5 +1,18 @@
 {% extends "base_logged_in.html" %}
+{% from "macros/buttons.html" import button, submit_button %} {# Importar botón #}
+{% from 'macros/respuesta/respuesta.html' import respuesta %} {# Importar macro #}
+
+
 {% block title %}Home{% endblock %}
+
 {% block contentheading %}Home{% endblock %}
+
 {% block maincontent %}
+    <div>
+        <h2>Respuesta a la pregunta</h2>
+        respuesta.
+    </div>
+
+
+
 {% endblock %}
