Añadidos usuario y fecha en respuesta

--- a/components/dms2223frontend/dms2223frontend/templates/macros/respuesta/respuesta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/respuesta/respuesta.html
@@ -19,6 +19,9 @@ import time
     <p> {{ submit_button('bluegb','Feedback neutro') }} </p><br>
     
     <p> {{ submit_button('greengb','Reportar respuesta') }} </p>
+
+    {{ respuesta.usuarioQueResponde }}
+    {{ respuesta.fechaHoraRespondidas }}
     
 {% endmacro %}
 
