--- a/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
+++ b/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
@@ -6,17 +6,18 @@
         <title>{% block title %}{% endblock %} - DMS 22/23</title>
     </head>
     <body>
-        <h2>Realiza una pregunta</h2>
+        <h2 class="aligncenter">Realiza una pregunta</h2>
         <form action="/action_page.php" id="formulario">
             <label for="titulo">Titulo de la pregunta:</label><br>
             <input type="textarea" id="titulo" name="titulo" size="100"><br><br>
             <label for="detalles">¿Cuales son los detalles de la pregunta?:</label><br>
             <textarea id="detalles" rows="10" cols="117" name="detalles" form="formulario"></textarea><br><br>
-            <input type="submit" value="Enviar Pregunta">  
-            <input type="reset" value="Vaciar Campos">
+            <!--<p class="aligncenter">{{ submit_button('greenbg', 'Log in') }}</p>-->
+            <p class="aligncenter"><input class="greenbg" type="submit" value="Enviar Pregunta"></p> 
+            <p class="aligncenter"><input class="graybg" type="reset" value="Vaciar Campos"></p><br>
         </form> 
         <div id="page-content">{% block pagecontent %}{% endblock %}</div>
-        <div id="crear-preguntas">
+        <div id="footer">
             {% block footer %}{% endblock %}
             <p>Authors: {{ authors }}</p>
             <p>Universidad de Burgos - Dise&ntilde;o y Mantenimiento del Software, year 2022-2023.</p>
