Añadidos los inputs para las respuestas

--- a/components/dms2223frontend/dms2223frontend/templates/home.html
+++ b/components/dms2223frontend/dms2223frontend/templates/home.html
@@ -1,6 +1,6 @@
 {% extends "base_logged_in.html" %}
 {% from "macros/buttons.html" import button, submit_button %} {# Importar botón #}
-{% from 'macros/respuesta/respuesta.html' import respuesta %} {# Importar macro #}
+{% from 'macros/respuesta/respuesta.html' import respuesta %} {# Importar macros #}
 {% from "macros/respuesta/contenedorRespuesta.html" import contenedorRespuestas %}
 
 
