Cambios de frontend
Problemas con docker

--- a/components/dms2223frontend/dms2223frontend/templates/macros/pregunta/pregunta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/pregunta/pregunta.html
@@ -2,9 +2,15 @@
 <h2 class="questiontext">{{titulo}}</h2>
 {% endmacro %}
 
+{% macro datosPregunta(usuario,fecha) %}
+<div class="datosPregunta">
+    <p>Preguntado por:{{usuario}}</p>
+    <p>Fecha de la pregunta:{{fecha}}</p>
+</div>
+{% endmacro %}
+
 {% macro cuepoPregunta(descripcion) %}
 <div class="questiondiv">
     <p>{{descripcion}}</p>
 </div>
 {% endmacro %}
-
