--- a/components/dms2223frontend/dms2223frontend/templates/home.html
+++ b/components/dms2223frontend/dms2223frontend/templates/home.html
@@ -2,4 +2,6 @@
 {% block title %}Home{% endblock %}
 {% block contentheading %}Home{% endblock %}
 {% block maincontent %}
+<p>algo<p>
 {% endblock %}
+
