--- a/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
+++ b/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
@@ -1,26 +1,16 @@
-<!DOCTYPE html>
-<html lang="es">
-    <head>
-        <link rel="stylesheet" href="/static/style.css" />
-        <meta charset="UTF-8" />
-        <title>{% block title %}{% endblock %} - DMS 22/23</title>
-    </head>
-    <body>
-        <h2 class="aligncenter">Realiza una pregunta</h2>
+{% extends "templates/base.html" %}
+{% from "macros/buttons.html" import button, submit_button, reset_button %}
+{% block title %}Log in{% endblock %}
+{% block pagecontent %}
+    <div id="preguntas-form">
+        <h2 class="aligncenter">Realiza una pregunta</h2><br>
         <form action="/action_page.php" id="formulario">
             <label for="titulo">Titulo de la pregunta:</label><br>
-            <input type="textarea" id="titulo" name="titulo" size="100"><br><br>
+            <input type="text" id="titulo" name="titulo" size="100"><br><br>
             <label for="detalles">¿Cuales son los detalles de la pregunta?:</label><br>
             <textarea id="detalles" rows="10" cols="117" name="detalles" form="formulario"></textarea><br><br>
-            <!--<p class="aligncenter">{{ submit_button('greenbg', 'Log in') }}</p>-->
-            <p class="aligncenter"><input class="greenbg" type="submit" value="Enviar Pregunta"></p> 
-            <p class="aligncenter"><input class="graybg" type="reset" value="Vaciar Campos"></p><br>
+            <p class="aligncenter">{{ submit_button('greenbg', 'Enviar Pregunta') }}</p>-->
+            <p class="aligncenter">{{ reset_button('graybg', 'Vaciar Campos') }}</p><br>
         </form> 
-        <div id="page-content">{% block pagecontent %}{% endblock %}</div>
-        <div id="footer">
-            {% block footer %}{% endblock %}
-            <p>Authors: {{ authors }}</p>
-            <p>Universidad de Burgos - Dise&ntilde;o y Mantenimiento del Software, year 2022-2023.</p>
-        </div>
-    </body>
-</html>
+    </div>
+{% endblock %}
