Commit 1 buttons.html
Creacción del botón reset_button

--- a/components/dms2223frontend/dms2223frontend/templates/macros/buttons.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/buttons.html
@@ -4,3 +4,7 @@
 {% macro submit_button(color_class, content) %}
 {{ button(color_class, '#', content, 'this.closest(\'form\').submit();return false;') }}
 {% endmacro %}
+
+{% macro reset_button(color_class, content) %}
+{{ button(color_class, '#', content, 'this.closest(\'form\').reset();return false;') }}
+{% endmacro %}
