Creadas las clases votos.py y VotosEndpoints.py
Implementados los botones de votacion en el frontend.

Comentado el codigo respectivo a los botones del frontend

*No se ha probado

--- a/components/dms2223frontend/dms2223frontend/templates/macros/buttons.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/buttons.html
@@ -5,12 +5,12 @@
 {% macro submit_button(color_class, content) %}
 {{ button(color_class, '#', content, 'this.closest(\'form\').submit();return false;') }}
 {% endmacro %}
-
+<!--MACRO PARA CREAR BOTON DE VOTO POSITIVO (FALTA IMPLEMENTAR QUE DETECTE SI YA SE PULSÓ ANTERIORMENTE)-->
 {% macro voteUp_button() %}
 {{ button(greenbg, '#', "vote Up", 'this.voteUp()') }}
 {% endmacro %}
-
+<!--MACRO PARA CREAR BOTON DE VOTO NEGATIVO (FALTA IMPLEMENTAR QUE DETECTE SI YA SE PULSÓ ANTERIORMENTE)-->
 {% macro voteDown_button() %}
-{{ button(redbg, '#', "vote Down", 'this.voteDown') }}
+{{ button(redbg, '#', "vote Down", 'this.voteDown()') }}
 {% endmacro %}
 
