--- a/components/dms2223frontend/dms2223frontend/templates/macros/pregunta/pregunta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/pregunta/pregunta.html
@@ -1,7 +1,13 @@
+<!--Imports de los botones de votacion-->
+{% from '../buttons.html' import voteUp_button %}
+{% from '../buttons.html' import voteDown_button %}
+
+<!--Pregunta en formato de titulo-->
 {% macro tituloPregunta(titulo) %}
 <h2 class="questiontext">{{titulo}}</h2>
 {% endmacro %}
 
+<!--Macro de los datos de pregunta(quien pregunto, fecha...)-->
 {% macro datosPregunta(usuario,fecha) %}
 <div class="datosPregunta">
     <p>Preguntado por:{{usuario}}</p>
@@ -9,6 +15,11 @@
 </div>
 {% endmacro %}
 
+<!--Implementacion de los botones de votacion-->
+{{ voteUp_button }}
+{{ voteDown_button }}
+
+<!--Macro del cuerpo de la pregunta-->
 {% macro cuepoPregunta(descripcion) %}
 <div class="questiondiv">
     <p>{{descripcion}}</p>
