--- a/components/dms2223frontend/dms2223frontend/templates/pregunta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/pregunta.html
@@ -1,12 +1,12 @@
 {% extends "inicio/base_anon.html" %}
-{% from 'macros/preguntas/preguntas_container.html' import preguntas %}
+{% from 'macros/preguntas/contenedor_preguntas.html' import preguntas %}
 {% from 'macros/preguntas/pregunta.html' import pregunta %}
 {% from 'macros/auth/registro.html' import registro %}
-{% block title %} Pregunta {% endblock %}
+{% block title %} {{ pregunta_env.tituloPregunta }} {% endblock %}
 
 
 {% block contentheading %}
-    <h1> Pregunta n</h1>
+    <h1> Pregunta {{pregunta_env.id}}</h1>
 {% endblock %}
 
 {% block maincontent %}
