--- a/components/dms2223frontend/dms2223frontend/templates/macros/respuestas/respuesta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/respuestas/respuesta.html
@@ -1,7 +1,6 @@
-import time
 {% from 'macros/respuestas/inputs.html' import input %}
 {% from "macros/buttons.html" import button, submit_button %}
-{% from "macros/respuestas/contenedorRespuesta.html" import contenedorRespuestas %}
+
 
 {% macro respuesta(respuesta) %}
 <div class="questiondiv">
@@ -22,7 +21,7 @@ import time
 
     <p> {{ submit_button('greengb','Reportar respuesta') }} </p>
 
-    {{ respuesta.usuarioQueResponde }}
-    {{ respuesta.fecha.strftime('%Y-%m-%d') }}
+    {{ respuesta.autor }}
+    {{ respuesta.fecha_creacion.strftime('%Y-%m-%d') }}
 </div>
 {% endmacro %}
