--- a/components/dms2223frontend/dms2223frontend/templates/inicio/inicio.html
+++ b/components/dms2223frontend/dms2223frontend/templates/inicio/inicio.html
@@ -16,7 +16,7 @@
             {{ registro() }}
         </div>
         
-        <div id="pregutas">
+        <div id="preguntas">
             <h2>Preguntas recientes</h2>
             {{ contenedor_preguntas(preguntas) }}
         </div>
