--- a/components/dms2223frontend/dms2223frontend/templates/macros/respuestas/respuesta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/respuestas/respuesta.html
@@ -23,8 +23,8 @@
         </div>    
 
         <div class="metadatosRespuesta">
-            {{ respuesta.autor }}
-            {{ respuesta.fecha_creacion.strftime('%Y-%m-%d') }}        
+            <p>{{ respuesta.autor }}</p>
+            <p>{{ respuesta.fecha_creacion.strftime('%Y-%m-%d') }}</p>        
         </div>
     </div>
     
