--- a/components/dms2223frontend/dms2223frontend/templates/macros/comentarios/comentario.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/comentarios/comentario.html
@@ -1,17 +1,19 @@
 {% from "macros/buttons.html" import button, submit_button, voto_positivo_button, voto_negativo_button %}
 
 {% macro comentario(comentario) %}
-    <div class="comentario">
-        <div id="votos">
-            {{ voto_positivo_button(comentario.votos_positivos) }}
-            {{ voto_negativo_button(comentario.votos_negativos) }}
-        </div>
-        <div class="contenido_comentario">
-            <p class="texto_comentario">{{comentario.contenido_comentario}}</p>
-            <div class="metadatos_comentario">
-                <p calss="">{{comentario.autor}}</p>
-                <p>{{comentario.fecha_creacion.strftime('%Y-%m-%d')}}</p>
+    <div class="comentario_div">
+        <div class="datos_comentario container2cols">
+            <div id="votos">
+                {{ voto_positivo_button(comentario.votos_positivos) }}
+                {{ voto_negativo_button(comentario.votos_negativos) }}
             </div>
+            <div class="contenido_comentario">
+                <p class="texto_comentario">{{comentario.contenido_comentario}}</p>
+            </div>
+        </div>
+        <div class="metadatos_comentario">
+            <p class="autor_comentario">{{comentario.autor}}</p>
+            <p>{{comentario.fecha_creacion.strftime('%Y-%m-%d')}}</p>
         </div>
     </div>
 {% endmacro %}
