--- a/components/dms2223frontend/dms2223frontend/templates/base.html
+++ b/components/dms2223frontend/dms2223frontend/templates/base.html
@@ -11,7 +11,7 @@
     <div id="page-content">{% block pagecontent %}{% endblock %}</div>
     <div id="footer">
         {% block footer %}{% endblock %}
-        <p>Authors: {{ authors }}</p>
+        <p>Authors: Maria Teresa Quintanal Dieste, Bilal Azar El Mourabit, Roberto Lastras Santos y Adrián Caballero Quiroga.</p>
         <p>Universidad de Burgos - Dise&ntilde;o y Mantenimiento del Software, year 2022-2023.</p>
     </div>
 </body>
