--- a/components/dms2223frontend/dms2223frontend/templates/macros/preguntas/pregunta.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/preguntas/pregunta.html
@@ -34,7 +34,7 @@
 </div>
 {% endmacro %}
 
-<!--Macro de la pregunta completa-->
+<!--Macro de la pregunta simple-->
 {% macro pregunta_simple(pregunta) %}
 <div class="questiondiv">
     {{tituloPregunta(pregunta.tituloPregunta,pregunta.id)}}
