--- a/components/dms2223frontend/dms2223frontend/templates/macros/comentarios/comentario.html
+++ b/components/dms2223frontend/dms2223frontend/templates/macros/comentarios/comentario.html
@@ -8,12 +8,12 @@
                 {{ voto_negativo_button(comentario.votos_negativos) }}
             </div>
             <div class="contenido_comentario">
-                <p class="texto_comentario">{{comentario.contenido_comentario}}</p>
+                <p class="texto_comentario">{{comentario.body}}</p>
             </div>
         </div>
         <div class="metadatos_comentario">
-            <p class="autor_comentario">{{comentario.autor}}</p>
-            <p>{{comentario.fecha_creacion.strftime('%Y-%m-%d')}}</p>
+            <p class="autor_comentario">{{comentario.username}}</p>
+            <p>{{comentario.timestamp}}</p>
         </div>
     </div>
 {% endmacro %}
