--- a/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
+++ b/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
@@ -1,18 +1,21 @@
-{% extends "base.html" %}
+{% extends "base_logged_in.html" %}
 {% from "macros/buttons.html" import button, submit_button, reset_button %}
 {% block title %}Log in{% endblock %}
 {% block pagecontent %}
 <div id="preguntas-form">
     <h2 class="aligncenter">Realiza una pregunta</h2><br>
-    <form action="/action_page.php" id="formulario">
+    <form action="/crear_preguntas" method="post">
         <label for="titulo">Titulo de la pregunta:</label><br>
-        <input type="text" id="titulo" name="titulo" size="100"><br><br>
+        <input type="text" id="title" name="title" size="100"><br><br>
         <label for="detalles">¿Cuales son los detalles de la pregunta?:</label><br>
-        <textarea id="detalles" rows="10" cols="117" name="detalles" form="formulario"></textarea><br><br>
-        <p class="aligncenter">{{button("greenbg","/home","Enviar Pregunta",())}}</p>-->
-        <p class="aligncenter">{{button("graybg","/crear_pregunta","Vaciar Campos",())}}</p><br>
+        <textarea id="body" rows="10" cols="117" name="body" form="formulario"></textarea><br><br>
+        <!-- <p class="aligncenter">{{button("greenbg","/home","Enviar Pregunta",())}}</p>
+        <p class="aligncenter">{{button("graybg","/crear_pregunta","Vaciar Campos",())}}</p><br> -->
+        <p class="aligncenter">{{submit_button("greenbg","Enviar Pregunta")}}</p>
+        <p class="aligncenter">{{submit_button("greenbg","Vaciar Campos")}}</p>
     </form>
 </div>
 {% endblock %}
+
 
 
