--- a/components/dms2223frontend/dms2223frontend/templates/home.html
+++ b/components/dms2223frontend/dms2223frontend/templates/home.html
@@ -13,7 +13,7 @@
 
 {% block maincontent %}
     <h2>Preguntas recientes</h2> 
-        {{button("greenbg","/crear_pregunta","Crear nueva",())}}
+        {{button("greenbg","/crear_preguntas","Crear nueva",())}}
     </div>
     {{ contenedor_preguntas(preguntas) }}
 {% endblock %}
