--- a/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
+++ b/components/dms2223frontend/dms2223frontend/templates/preguntas/crear_preguntas.html
@@ -5,14 +5,15 @@
 <div id="preguntas-form">
     <h2 class="aligncenter">Realiza una pregunta</h2><br>
     <form action="/crear_preguntas" method="post">
-        <label for="titulo">Titulo de la pregunta:</label><br>
+        <label for="title">Titulo de la pregunta:</label><br>
         <input type="text" id="title" name="title" size="100"><br><br>
         <label for="detalles">¿Cuales son los detalles de la pregunta?:</label><br>
         <textarea id="body" rows="10" cols="117" name="body" form="formulario"></textarea><br><br>
         <!-- <p class="aligncenter">{{button("greenbg","/home","Enviar Pregunta",())}}</p>
-        <p class="aligncenter">{{button("graybg","/crear_pregunta","Vaciar Campos",())}}</p><br> -->
+        <p class="aligncenter">{{button("graybg","/crear_preguntas","Vaciar Campos",())}}</p><br> -->
         <p class="aligncenter">{{submit_button("greenbg","Enviar Pregunta")}}</p>
         <p class="aligncenter">{{submit_button("greenbg","Vaciar Campos")}}</p>
+        
     </form>
 </div>
 {% endblock %}
